--- a/index.html
+++ b/index.html
@@ -79,14 +79,19 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <div class="card-header">poke /pô'ka/</div>
+                            <div class="card-header" style="background: gray;">poke <img src="./images/pronounciation.png" alt=""></div>
                             <div class="text-italic">noun</div>
                             <p class="descriptions">
                                 Pronounced(Po-kay)
                                 A popular Hawaiian dish of marinated, diced raw fish , served over rice
                             </p>
                             <div class="image-sounds">
-                                <img src="" alt="sounds-click">
+                                <audio id="sounds"> 
+                                    <source src="./images/poke.mp3" type="audio/mpeg"> 
+                                </audio>
+                                <a href="#" id="on-sounds">
+                                    <img src="./images/sound-dark.png" alt="sounds-click">
+                                </a>
                             </div>
                         </div>
                     </div>
